Fixes bug due to last migration. Change Rails from 3.0.0.rc2 to 3.0.0 Adds the possibility to change orientation of the presentation in purchase/sale orders creation.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1634 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -31,6 +31,7 @@ fra:
       journal_close: 'Clôture du %{name}'
       journal_create: 'Créer un nouveau journal'
       journal_entry_create: 'Ajouter une écriture'
+      journal_entry_line_create: 'Ajouter une nouvelle ligne d''écriture'
       journal_record: 'Pièce comptable N°%{number} du %{created_on}'
       journal_record_create: 'Ajouter une pièce'
       journal_record_update: 'Modifier la pièce N°%{number} du %{created_on}'
@@ -295,7 +296,7 @@ fra:
     account_tabbox:
       children: 'Sous-comptes'
       entities: 'Personnes'
-      journal_entries: 'Écritures'
+      journal_entry_lines: 'Écritures'
     account_tangible_fixed_assets: 'Immobilisations corporelles'
     account_untangible_fixed_assets: 'Immobilisations incorporelles'
     account_update: 'Modifier le compte'
@@ -452,6 +453,7 @@ fra:
       other: 'Effectuer une remise : %{mode} (%{count} encaissements)'
       zero: 'Effectuer une remise : %{mode} (Pas d''encaissement)'
     deposit_update: 'Modifier la remise en banque'
+    depositable: 'Complément d''information'
     description: 'Description'
     details: 'Informations complémentaires'
     discount: 'Réduc. (%)'
@@ -473,7 +475,6 @@ fra:
     edit: 'Modifier'
     ekylibre: 'www.ekylibre.org'
     email: 'Email:'
-    embankable: 'Complément d''information'
     employee_name: 'Employé'
     end: 'au'
     entities_export: 'Tout exporter au format CSV'
@@ -582,8 +583,8 @@ fra:
     journal_view:
       draft_entry_lines: 'Brouillard'
       entries: 'Écritures'
-      mixed: 'Pièces et écritures'
-      records: 'Pièces'
+      entry_lines: 'Lignes d''écritures'
+      mixed: 'Écritures et lignes'
     journals: 'Journaux'
     land_parcel_name: 'Îlot'
     land_parcel_update: 'Modifier l''îlot'
@@ -910,7 +911,7 @@ fra:
     sale_payments: 'Encaissements'
     sale_payments_states:
       all: 'Tous'
-      unembanked: 'Non remis en banque'
+      undeposited: 'Non remis en banque'
       unparted: 'Non affectés'
       unreceived: 'Non reçus'
       waiting: 'À encaisser plus tard'
@@ -980,7 +981,7 @@ fra:
     to_bank_on: 'À encaisser le'
     to_date: 'Au'
     to_deliver: 'Livrer'
-    to_embank: 'À encaisser'
+    to_deposit: 'À encaisser'
     toggle_print_mode: 'Activer/désactiver le mode "Imprimable"'
     tool_update: 'Modifier le matériel'
     tool_use_create: 'Ajouter un matériel'
@@ -996,7 +997,7 @@ fra:
     transport: 'Transport'
     transport_deliveries: 'Livraisons du transport'
     undelivered: 'Reste à livrer'
-    unembanked: 'Non remis en banque'
+    undeposited: 'Non remis en banque'
     uninvoiced_amount: 'Montant non facturé'
     unit: 'Unité'
     units_load: 'Charger les unités de base manquantes'
@@ -1128,11 +1129,11 @@ fra:
     no_balance_template: 'Pas de modèle de document pour la balance'
     no_closable_financial_year: 'Vous n''avez aucun exercice à clôturer.'
     no_closable_journal: 'Vous ne pouvez pas clôturer ce journal.'
-    no_embankable_payments: 'Il n''y a pas de réglements à remettre en banque'
+    no_depositable_payments: 'Il n''y a pas de réglements à remettre en banque'
     no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant'
     no_financial_year: 'Aucun exercice enregistré'
     no_lines_found: 'Aucun pruduit n''a été ajouté à la commande '
-    no_payment_to_embank: 'Aucun règlement à encaisser'
+    no_payment_to_deposit: 'Aucun règlement à encaisser'
     no_reopenable_journal: 'Vous ne pouvez pas déclôturer ce journal.'
     no_stocks: 'Vous n''avez aucun stock. Si vous désirez gérer le stock d''un produit, veuillez cocher l''option "Gérer les stocks" dans les caractéristiques de votre produit.'
     no_template_journal: 'Pas de modèle journal'
@@ -1177,7 +1178,7 @@ fra:
         charges: 'Comptes de charges'
         financial_banks: 'Comptes de banque'
         financial_cashes: 'Comptes de caisse'
-        financial_payments_to_embank: 'Règlements à encaisser'
+        financial_payments_to_deposit: 'Règlements à encaisser'
         products: 'Comptes de produits'
         taxes_acquisition: 'Compte des taxes d''acquisitions intracommunautaires'
         taxes_assimilated: 'Compte des taxes assimilées'
