--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -185,7 +185,7 @@ fra:
             closed_on:
               end_of_month: '%{attribute} doit correspondre à une date de fin de mois (%{closed_on})'
         journal_entry:
-          closed_journal: 'Le journal est clôturé au %{on} donc vous ne pouvez plus créer, modifier ou supprimer de pièces jusqu''à cette date-là.'
+          closed_journal: 'Le journal est clôturé au %{closed_on} donc vous ne pouvez plus créer, modifier ou supprimer de pièces jusqu''à cette date-là.'
           out_of_financial_year: 'La pièce doit être saisie durant l''exercice'
           unbalanced: 'La pièce n''est pas équilibrée'
         journal_entry_line:
@@ -468,6 +468,11 @@ fra:
     departments: 'Services'
     deposit: 'Remise en banque'
     deposit_id: 'Remise en banque'
+    depositable_payments: 'Encaissements encaissables'
+    depositables_account: 'Compte d''attente pour les encaissements à encaisser'
+    depositables_account_id: 'Compte d''attente pour les encaissements à encaisser'
+    depositer: 'Responsable'
+    depositer_id: 'Responsable'
     deposits: 'Remises en banque'
     description: 'Description'
     dest_contact: 'Adresse de livraison'
@@ -493,11 +498,6 @@ fra:
     duration: 'Durée'
     ean13: 'Code EAN13'
     email: 'Courriel (e-mail)'
-    embankable_payments: 'Encaissements encaissables'
-    embankables_account: 'Compte d''attente pour les encaissements à encaisser'
-    embankables_account_id: 'Compte d''attente pour les encaissements à encaisser'
-    embanker: 'Responsable'
-    embanker_id: 'Responsable'
     employed: 'Employé par la société'
     employees: 'employés'
     employment: 'Emploi/Rôle'
@@ -710,8 +710,8 @@ fra:
     payment_way: 'Mode de décaissement'
     payments: 'Encaissements'
     payments_count: 'Nb. encaissements'
-    payments_to_embank: 'Encaissements à encaisser'
-    payments_to_embank_accounts: 'Comptes des encaissements à encaisser'
+    payments_to_deposit: 'Encaissements à encaisser'
+    payments_to_deposit_accounts: 'Comptes des encaissements à encaisser'
     period: 'Périodicité'
     period_name: 'Périodicité'
     phone: 'Téléphone'
