--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -19,17 +19,18 @@ jpn:
       #>cashes: 'Cash'
       #>document_print: 'Prints, exportations'
       #>draft_entry_lines: 'Draft'
-      #>financial_year: 'Period %{code}'
-      #>financial_year_close: 'Close period'
-      #>financial_year_create: 'Create new period'
-      #>financial_year_update: 'Update new period'
-      #>financial_years: 'Period'
+      #>financial_year: 'Financial year %{code}'
+      #>financial_year_close: 'Close financial year'
+      #>financial_year_create: 'Open a new financial year'
+      #>financial_year_update: 'Update new financial year'
+      #>financial_years: 'Financial years'
       #>general_ledger: 'Ledger'
       #>index: 'General Accountancy'
       #>journal: 'Journal: %{name} (%{code})'
       #>journal_close: 'Closing of %{name}'
       #>journal_create: 'Create new journal'
       #>journal_entry_create: 'Add an Entry'
+      #>journal_entry_line_create: 'Add a new entry line'
       #>journal_record: 'document N°%{number} du %{created_on}'
       #>journal_record_create: 'Add a document'
       #>journal_record_update: 'Update Document N°%{number} du %{created_on}'
@@ -189,16 +190,16 @@ jpn:
       #>warehouses: 'Warehouses'
     production:
       #>index: 'Production Management'
-      #>land_parcel: 'LandParcel %{name}'
-      #>land_parcel_create: 'Add a new land_parcel'
-      #>land_parcel_update: 'Update LandParcel: %{name}'
-      #>land_parcels: 'LandParcels'
+      #>land_parcel: 'Land parcel %{name}'
+      #>land_parcel_create: 'Add a new land parcel'
+      #>land_parcel_update: 'Update land parcel: %{name}'
+      #>land_parcels: 'Land parcels'
       #>operation: 'Operation Details %{name}'
-      #>operation_create: 'Create a new Operation'
-      #>operation_nature_create: 'Create a new type of Operation'
-      #>operation_nature_update: 'update Type of Operation: %{name}'
-      #>operation_natures: 'Types of Operation'
-      #>operation_update: 'Update Operation %{name}'
+      #>operation_create: 'Create a new operation'
+      #>operation_nature_create: 'Create a new type of operation'
+      #>operation_nature_update: 'update Type of operation: %{name}'
+      #>operation_natures: 'Types of operation'
+      #>operation_update: 'Update operation %{name}'
       #>operations: 'Operations'
       #>tool: 'Tool: %{name}'
       #>tool_create: 'Add a tool'
@@ -291,7 +292,7 @@ jpn:
     account_tabbox:
       #>children: 'Children Account'
       #>entities: 'People'
-      #>journal_entries: 'Entry Journal'
+      #>journal_entry_lines: 'Journal entry lines'
     #>account_tangible_fixed_assets: 'Tangible Fixed Assets'
     #>account_untangible_fixed_assets: 'Untangible Fixed Assets'
     #>account_update: 'Update account'
@@ -330,7 +331,7 @@ jpn:
     #>are_you_sure_to_invoice: 'Are you sure you want to invoice?'
     #>are_you_sure_to_send_mails: 'Are you sure you want to send emails?'
     #>area_x: '%{name} (%{postcode})'
-    #>assessable_operations: 'Assessable Operations (without tax)'
+    #>assessable_operations: 'Assessable operations (without tax)'
     #>assimilated_tax: 'Assimilated Taxes'
     #>attachment: 'Attachment'
     #>attorney: 'Attorney'
@@ -383,7 +384,7 @@ jpn:
     #>client_informations: 'Client informations'
     #>client_phone: 'Phone'
     close: '閉じる'
-    #>close_financial_year: 'Close period'
+    #>close_financial_year: 'Close financial year'
     #>close_journal: 'Close the journal'
     #>closed: 'Closed'
     #>column: 'Column'
@@ -446,6 +447,7 @@ jpn:
       #>other: 'Make a deposit %{mode}: %{count} payments'
       #>zero: 'Make a deposit %{mode}: no payments'
     #>deposit_update: 'Deposit update'
+    #>depositable: 'More informations'
     #>description: 'Description'
     #>details: 'Details'
     #>discount: 'Discount (%)'
@@ -467,7 +469,6 @@ jpn:
     #>edit: 'Edit'
     ekylibre: 'www.ekylibre.org'
     #>email: 'Email:'
-    #>embankable: 'More informations'
     #>employee_name: 'Employee'
     #>end: 'to'
     #>entities_export: 'Export as a CSV file'
@@ -575,12 +576,12 @@ jpn:
     journal_view:
       #>draft_entry_lines: 'Draft entries'
       #>entries: 'Entries'
-      #>mixed: 'Documents and entries'
-      #>records: 'Documents'
+      #>entry_lines: 'Lines of entries'
+      #>mixed: 'Entries and lines'
     #>journals: 'Journals'
-    #>land_parcel_name: 'LandParcel Name'
-    #>land_parcel_update: 'Update LandParcel'
-    #>land_parcels: 'LandParcels'
+    #>land_parcel_name: 'Land parcel name'
+    #>land_parcel_update: 'Update land parcel'
+    #>land_parcels: 'Land parcels'
     #>last_payment_amount: 'Amount of the last payment'
     #>last_payment_date: 'Date of the last payment'
     #>left_balance_amount: 'Left Balance Amount'
@@ -680,13 +681,13 @@ jpn:
       #>other: '%{count} mandates'
       #>zero: 'No mandates'
     nb_operations:
-      #>one: '1 Operation performed'
-      #>other: '%{count} Operation performed'
-      #>zero: 'No Operation performed'
+      #>one: '1 operation performed'
+      #>other: '%{count} operation performed'
+      #>zero: 'No operation performed'
     nb_payments:
-      #>one: '1 sale payment to embank'
-      #>other: '%{count} sale payments to embank'
-      #>zero: 'No sale payments to embank'
+      #>one: '1 sale payment to deposit'
+      #>other: '%{count} sale payments to deposit'
+      #>zero: 'No sale payments to deposit'
     nb_products:
       #>one: 'One product'
       #>other: '%{count} products'
@@ -734,7 +735,7 @@ jpn:
     #>no_tracking: 'No tracking'
     #>no_transfers: 'No transfers'
     #>normal: 'Normal'
-    #>not_assessable_operations: 'Not Assessable Operations'
+    #>not_assessable_operations: 'Not Assessable operations'
     #>not_begins: 'Do not start with'
     #>not_contains: 'Do not contains'
     #>not_finishes: 'Do not finish with'
@@ -751,15 +752,15 @@ jpn:
     #>on_account: 'On account'
     #>one_condition: 'One condition'
     #>operation_lines: 'Incoming and outgoing products'
-    #>operation_update: 'Update Operation'
+    #>operation_update: 'Update operation'
     #>operations: 'Operations'
     #>order: 'Order'
     #>order_amount_with_taxes: 'Order amount with taxes'
     #>order_print: 'Order print'
     #>other_results: 'Other results...'
     #>others: 'Other VAT to be deducted'
-    #>others_assessable_operations: 'Other Assessable Operations'
-    #>others_not_assessable_operations: 'Other Not Assessable Operations'
+    #>others_assessable_operations: 'Other Assessable operations'
+    #>others_not_assessable_operations: 'Other Not Assessable operations'
     #>others_services: 'Other Services'
     #>out_line_create: 'Add a new outgoing product'
     #>out_vat_amount: 'Basis without Taxes'
@@ -836,7 +837,7 @@ jpn:
       #>all: 'All'
       #>undelivered: 'Undelivered'
       #>unparted: 'Unused'
-      #>waiting: 'To embank later'
+      #>waiting: 'To deposit later'
     #>purchase_price_create: 'Purchase price create'
     purchase_steps:
       #>active: 'Purchase'
@@ -900,10 +901,10 @@ jpn:
     #>sale_payments: 'Sale payments'
     sale_payments_states:
       #>all: 'All'
-      #>unembanked: 'Unembanked'
+      #>undeposited: 'Undeposited'
       #>unparted: 'Unused'
       #>unreceived: 'Unreceived'
-      #>waiting: 'To embank later'
+      #>waiting: 'To deposit later'
     #>sale_price_create: 'Sale price create'
     sale_steps:
       #>deliveries: 'Deliveries'
@@ -929,7 +930,7 @@ jpn:
     #>select_date_generation: 'Limit date for generation'
     #>select_existing_payment: 'Select existing payment'
     #>select_file_to_upload: 'Select file to upload'
-    #>select_financial_year: 'Period'
+    #>select_financial_year: 'Financial year'
     #>select_number: 'Select number'
     #>select_number_or_date: 'Select number or date'
     #>select_organization: 'Select organization'
@@ -970,7 +971,7 @@ jpn:
     #>to_bank_on: 'To bank on'
     #>to_date: 'To date'
     #>to_deliver: 'To deliver'
-    #>to_embank: 'To embank'
+    #>to_deposit: 'To deposit'
     #>toggle_print_mode: 'Activate/deactivate "Printable" mode'
     #>tool_update: 'Update tool'
     #>tool_use_create: 'Add a tool'
@@ -986,7 +987,7 @@ jpn:
     #>transport: 'Transport'
     #>transport_deliveries: 'Deliveries'
     #>undelivered: 'Undelivered'
-    #>unembanked: 'Unembanked'
+    #>undeposited: 'Undeposited'
     #>uninvoiced_amount: 'Uninvoiced amount'
     #>unit: 'Unit'
     #>units_load: 'Load missing units'
@@ -1119,11 +1120,11 @@ jpn:
     #>no_balance_template: 'No template for the balance'
     #>no_closable_financial_year: 'No closable financial year.'
     #>no_closable_journal: 'No closable journal'
-    #>no_embankable_payments: 'There are no payment to embank'
+    #>no_depositable_payments: 'There are no payment to deposit'
     #>no_existing_mandates: 'There are no mandates'
     #>no_financial_year: 'No financial year registered'
     #>no_lines_found: 'No product has been added to the order'
-    #>no_payment_to_embank: 'There are no payment to embank'
+    #>no_payment_to_deposit: 'There are no payment to deposit'
     #>no_reopenable_journal: 'You can not re-open this journal.'
     #>no_stocks: 'You have no stock. If you want to manage the stock of a product, please check the option "Manage stocks" in the characteristics of your product.'
     #>no_template_journal: 'No template for the journal'
@@ -1169,7 +1170,7 @@ jpn:
         #>charges: 'Charges accounts'
         #>financial_banks: 'Banks accounts'
         #>financial_cashes: 'Cashes accounts'
-        #>financial_payments_to_embank: 'Payments to embank accounts'
+        #>financial_payments_to_deposit: 'Payments to deposit accounts'
         #>products: 'Products accounts'
         #>taxes_acquisition: 'Accounts of taxes for intra-Community acquisitions'
         #>taxes_assimilated: 'Assimilated taxes accounts'
@@ -1190,11 +1191,11 @@ jpn:
     general:
       #>language: 'Default language'
     management:
+      depositments:
       deposits:
         #>days_before_warning_undone: 'Number of days before warning for receipts not made'
         #>days_before_warning_unvalidated: 'Number of days before warning for receipts not validated'
         #>numeration: 'Numeration of deposits'
-      embankments:
       invoices:
         #>numeration: 'Numeration of invoices'
       payments:
