--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -31,6 +31,7 @@ spa:
       journal_close: 'Cierre del %{name}'
       journal_create: 'Crear un nuevo periodico'
       journal_entry_create: 'Añadir nueva escritura'
+      #>journal_entry_line_create: 'Add a new entry line'
       journal_record: 'Pieza contable N°%{number} del %{fecha de creacion}'
       journal_record_create: 'Añadir una pieza'
       journal_record_update: 'Modificar la pieza N°%{numro} du %{fecha de creacion}'
@@ -191,16 +192,16 @@ spa:
       warehouses: 'Lugar de deposito'
     production:
       #>index: 'Production Management'
-      #>land_parcel: 'LandParcel %{name}'
-      #>land_parcel_create: 'Add a new land_parcel'
-      #>land_parcel_update: 'Update LandParcel: %{name}'
-      #>land_parcels: 'LandParcels'
+      #>land_parcel: 'Land parcel %{name}'
+      #>land_parcel_create: 'Add a new land parcel'
+      #>land_parcel_update: 'Update land parcel: %{name}'
+      #>land_parcels: 'Land parcels'
       #>operation: 'Operation Details %{name}'
-      #>operation_create: 'Create a new Operation'
-      #>operation_nature_create: 'Create a new type of Operation'
-      #>operation_nature_update: 'update Type of Operation: %{name}'
-      #>operation_natures: 'Types of Operation'
-      #>operation_update: 'Update Operation %{name}'
+      #>operation_create: 'Create a new operation'
+      #>operation_nature_create: 'Create a new type of operation'
+      #>operation_nature_update: 'update Type of operation: %{name}'
+      #>operation_natures: 'Types of operation'
+      #>operation_update: 'Update operation %{name}'
       #>operations: 'Operations'
       #>tool: 'Tool: %{name}'
       #>tool_create: 'Add a tool'
@@ -294,7 +295,8 @@ spa:
     account_tabbox:
       children: 'subcuentos'
       entities: 'Personas'
-      journal_entries: 'Éscrituras'
+      journal_entries: 'Éscrituras' #!
+      #>journal_entry_lines: 'Journal entry lines'
     account_tangible_fixed_assets: 'Inmobilisaciones corporales'
     account_untangible_fixed_assets: 'Inmobilisacions incorporales'
     account_update: 'Modificar el cuento'
@@ -387,7 +389,7 @@ spa:
     #>client_informations: 'Client informations'
     #>client_phone: 'Phone'
     close: 'Cerrar'
-    #>close_financial_year: 'Close period'
+    #>close_financial_year: 'Close financial year'
     #>close_journal: 'Close the journal'
     closed: 'Cerrados'
     code: 'Codigo' #!
@@ -453,6 +455,7 @@ spa:
       other: 'Hacer un aposto : %{mode} (%{count} encajonamientos)'
       zero: 'Hacer un aposto : %{mode} (Ningun encajonamiento)'
     deposit_update: 'Modifiar el aposto en banco'
+    #>depositable: 'More informations'
     description: 'Descripción general'
     #>details: 'Details'
     #>discount: 'Discount (%)'
@@ -477,7 +480,6 @@ spa:
     #>edit: 'Edit'
     ekylibre: 'www.ekylibre.org'
     #>email: 'Email:'
-    #>embankable: 'More informations'
     #>employee_name: 'Employee'
     end: 'al'
     #>entities_export: 'Export as a CSV file'
@@ -589,12 +591,13 @@ spa:
       draft_entries: 'Niebla' #!
       #>draft_entry_lines: 'Draft entries'
       entries: 'Éscrituras'
+      #>entry_lines: 'Lines of entries'
       mixed: 'Piezas y Escrituras'
-      records: 'Piezas'
+      records: 'Piezas' #!
     journals: 'Periodico general'
-    #>land_parcel_name: 'LandParcel Name'
-    #>land_parcel_update: 'Update LandParcel'
-    #>land_parcels: 'LandParcels'
+    #>land_parcel_name: 'Land parcel name'
+    #>land_parcel_update: 'Update land parcel'
+    #>land_parcels: 'Land parcels'
     #>last_payment_amount: 'Amount of the last payment'
     #>last_payment_date: 'Date of the last payment'
     left_balance_amount: 'Aplazamiento del credito anterior sin imputar ni reembolsar'
@@ -696,13 +699,13 @@ spa:
       #>other: '%{count} mandates'
       #>zero: 'No mandates'
     nb_operations:
-      #>one: '1 Operation performed'
-      #>other: '%{count} Operation performed'
-      #>zero: 'No Operation performed'
+      #>one: '1 operation performed'
+      #>other: '%{count} operation performed'
+      #>zero: 'No operation performed'
     nb_payments:
-      #>one: '1 sale payment to embank'
-      #>other: '%{count} sale payments to embank'
-      #>zero: 'No sale payments to embank'
+      #>one: '1 sale payment to deposit'
+      #>other: '%{count} sale payments to deposit'
+      #>zero: 'No sale payments to deposit'
     nb_products:
       #>one: 'One product'
       #>other: '%{count} products'
@@ -768,7 +771,7 @@ spa:
     #>one_condition: 'One condition'
     operation:
     #>operation_lines: 'Incoming and outgoing products'
-    #>operation_update: 'Update Operation'
+    #>operation_update: 'Update operation'
     #>operations: 'Operations'
     #>order: 'Order'
     #>order_amount_with_taxes: 'Order amount with taxes'
@@ -854,7 +857,7 @@ spa:
       #>all: 'All'
       #>undelivered: 'Undelivered'
       #>unparted: 'Unused'
-      #>waiting: 'To embank later'
+      #>waiting: 'To deposit later'
     #>purchase_price_create: 'Purchase price create'
     purchase_steps:
       active: 'Creación de la compra'
@@ -921,10 +924,10 @@ spa:
     #>sale_payments: 'Sale payments'
     sale_payments_states:
       #>all: 'All'
-      #>unembanked: 'Unembanked'
+      #>undeposited: 'Undeposited'
       #>unparted: 'Unused'
       #>unreceived: 'Unreceived'
-      #>waiting: 'To embank later'
+      #>waiting: 'To deposit later'
     #>sale_price_create: 'Sale price create'
     sale_steps:
       deliveries: 'Planificación de las entregas'
@@ -997,7 +1000,7 @@ spa:
     #>to_bank_on: 'To bank on'
     #>to_date: 'To date'
     #>to_deliver: 'To deliver'
-    #>to_embank: 'To embank'
+    #>to_deposit: 'To deposit'
     #>toggle_print_mode: 'Activate/deactivate "Printable" mode'
     #>tool_update: 'Update tool'
     #>tool_use_create: 'Add a tool'
@@ -1013,7 +1016,7 @@ spa:
     #>transport: 'Transport'
     #>transport_deliveries: 'Deliveries'
     #>undelivered: 'Undelivered'
-    #>unembanked: 'Unembanked'
+    #>undeposited: 'Undeposited'
     #>uninvoiced_amount: 'Uninvoiced amount'
     unit: 'Unidad'
     unit_create: 'Añadir una nueva unidad de medida' #!
@@ -1155,11 +1158,11 @@ spa:
     no_balance_template: 'No hay modelo de documento para este equilibrio'
     no_closable_financial_year: 'Hay ningun ejercicio para cerrar.'
     no_closable_journal: 'No se puede cerrar este periodico.'
-    no_embankable_payments: 'No hay pago para entregar en banco'
+    no_depositable_payments: 'No hay pago para entregar en banco'
     no_existing_mandates: 'No hay responsabilidades registradas por el momento'
     no_financial_year: 'Ningun ejercicio registrado'
     no_lines_found: 'Ningun producto ha sido añadido al encargo'
-    no_payment_to_embank: 'Ninguna forma de pago a cobrar'
+    no_payment_to_deposit: 'Ninguna forma de pago a cobrar'
     no_reopenable_journal: 'nos se puede cerrar este periodico.'
     no_stocks: 'No hay ningun deposito. Si se quiere adùinistrar los depositos para une producto, por favor escroge la opción "administrar los depositos" dentro de las caracteristicas de vuestro producto.'
     no_template_journal: 'Ningun modelo de periodico'
@@ -1208,7 +1211,7 @@ spa:
         #>charges: 'Charges accounts'
         #>financial_banks: 'Banks accounts'
         #>financial_cashes: 'Cashes accounts'
-        #>financial_payments_to_embank: 'Payments to embank accounts'
+        #>financial_payments_to_deposit: 'Payments to deposit accounts'
         #>products: 'Products accounts'
         #>taxes_acquisition: 'Accounts of taxes for intra-Community acquisitions'
         #>taxes_assimilated: 'Assimilated taxes accounts'
