--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1283,7 +1283,7 @@ eng:
     you_must_have_an_email_column: 'You must have an email address in your extraction'
     you_must_select_a_file_to_import: 'You must select a file to import'
     you_will_lose_all_your_current_data: 'If you continue, you will lose all your data being entered. Would you continue?' #!
-  parameters:
+  preferences:
     accountancy:
       accountize:
         automatic: 'Activate the automatic accounting transfer'
