Begins to fix compatibility bugs with SQL Server
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1640 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -763,7 +763,7 @@ eng:
     record_value: 'Record value'
     record_value_id: 'Record value'
     record_value_type: 'Record value type'
-    records: 'Records'
+    records: 'Records' #!
     reductible: 'Reductible'
     reduction: 'Reduction'
     reduction_origin: 'Reduction origin'
