Fixes the adaptations for SQL Server
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1641 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -329,11 +329,11 @@ fra:
     amount_with_taxes: 'Montant TTC'
     apply: 'Appliquer'
     are_you_sure: 'Êtes-vous sûr(e) de vouloir faire cela ?'
-    are_you_sure_to_confirm: 'Êtes-vous sûr(e) de vouloir passer la vente en commande ?'
-    are_you_sure_to_delete: 'Êtes-vous sûr(e) de vouloir supprimer cet enregistrement ?'
-    are_you_sure_to_delete_delivery: 'Êtes-vous sûr(e) de vouloir enlever cette livraison du transport ?'
-    are_you_sure_to_invoice: 'Êtes-vous sûr(e) de vouloir facturer la vente ?'
-    are_you_sure_to_send_mails: 'Êtes-vous sûr(e) de vouloir envoyer les mails ?'
+    are_you_sure_you_want_to_confirm: 'Êtes-vous sûr(e) de vouloir passer la vente en commande ?'
+    are_you_sure_you_want_to_delete: 'Êtes-vous sûr(e) de vouloir supprimer cet enregistrement ?'
+    are_you_sure_you_want_to_delete_delivery: 'Êtes-vous sûr(e) de vouloir enlever cette livraison du transport ?'
+    are_you_sure_you_want_to_invoice: 'Êtes-vous sûr(e) de vouloir facturer la vente ?'
+    are_you_sure_you_want_to_send_mails: 'Êtes-vous sûr(e) de vouloir envoyer les mails ?'
     area_x: '%{name} (%{postcode})'
     assessable_operations: 'Opérations imposables (H.T)'
     assimilated_tax: 'Taxes assimilées calculées sur annexe n°3310A'
