--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -325,11 +325,11 @@ jpn:
     #>amount_with_taxes: 'Amount with taxes'
     apply: '適用する'
     #>are_you_sure: 'Are you sure you want to do this?'
-    #>are_you_sure_to_confirm: 'Are you sure you want to order'
-    #>are_you_sure_to_delete: 'Are you sure you want to delete this record?'
-    #>are_you_sure_to_delete_delivery: 'Are you sure you want to remove the delivery of transport?'
-    #>are_you_sure_to_invoice: 'Are you sure you want to invoice?'
-    #>are_you_sure_to_send_mails: 'Are you sure you want to send emails?'
+    #>are_you_sure_you_want_to_confirm: 'Are you sure you want to order'
+    #>are_you_sure_you_want_to_delete: 'Are you sure you want to delete this record?'
+    #>are_you_sure_you_want_to_delete_delivery: 'Are you sure you want to remove the delivery of transport?'
+    #>are_you_sure_you_want_to_invoice: 'Are you sure you want to invoice?'
+    #>are_you_sure_you_want_to_send_mails: 'Are you sure you want to send emails?'
     #>area_x: '%{name} (%{postcode})'
     #>assessable_operations: 'Assessable operations (without tax)'
     #>assimilated_tax: 'Assimilated Taxes'
