--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -331,11 +331,11 @@ arb:
     amount_with_taxes: 'مجموع قيمة التسليم مع كامل الضرائب'
     apply: 'تطبيق'
     are_you_sure: 'هل انت متأكد من رغبتك بالقيام به؟'
-    are_you_sure_to_confirm: 'هل انت متأكد من رغبتك بالمضي بطلب الشراء؟'
-    are_you_sure_to_delete: 'هل انت متاكد من رغبتك بالقيام به؟'
-    are_you_sure_to_delete_delivery: 'هل انت متأكد من رغبتك بازالة التسليم من وسائل النقل؟'
-    are_you_sure_to_invoice: 'هل انت متأكد من رغبتك باعداد فاتورة البيع؟'
-    are_you_sure_to_send_mails: 'هل انت متأكد من رغبتك بارسال الرسالة'
+    are_you_sure_you_want_to_confirm: 'هل انت متأكد من رغبتك بالمضي بطلب الشراء؟'
+    are_you_sure_you_want_to_delete: 'هل انت متاكد من رغبتك بالقيام به؟'
+    are_you_sure_you_want_to_delete_delivery: 'هل انت متأكد من رغبتك بازالة التسليم من وسائل النقل؟'
+    are_you_sure_you_want_to_invoice: 'هل انت متأكد من رغبتك باعداد فاتورة البيع؟'
+    are_you_sure_you_want_to_send_mails: 'هل انت متأكد من رغبتك بارسال الرسالة'
     area_create: 'اضافة عنوان بريدي' #!
     area_x: '{{name}} ({{postcode}})'
     assessable_operations: 'الاجراءات الضريبية (H.T)'
