Begins to fix problem on select_all in migrations. Need to use Arel.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1642 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -100,7 +100,7 @@ fra:
       delays: 'Délais'
       deposit: 'Remise en banque %{number} du %{created_on}'
       deposit_create: 'Créer une remise : %{mode}'
-      deposit_update: 'Modifier la remise en banque du %{created_on}'
+      deposit_update: 'Modifier la remise en banque n°%{number} du %{created_on}'
       deposits: 'Remises en banque'
       index: 'Gestion commerciale'
       inventories: 'Inventaires'
