--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -229,6 +229,7 @@ fra:
       area: 'Zone postale'
       bank_statement: 'Relevé de compte bancaire'
       cash: 'Trésorerie'
+      cash_transfer: 'Virement de trésorerie'
       company: 'Société'
       contact: 'Contact'
       currency: 'Devise'
@@ -238,6 +239,7 @@ fra:
       delay: 'Délai'
       department: 'Service'
       deposit: 'Remise en banque'
+      deposit_line: 'Ligne de remise en banque'
       district: 'Zone administrative'
       document: 'Document'
       document_template: 'Modèle de document'
@@ -272,6 +274,9 @@ fra:
       product_category: 'Catégorie de produit'
       product_component: 'Composant de produit'
       profession: 'Profession'
+      purchase_delivery: 'Arrivage'
+      purchase_delivery_line: 'Ligne d''arrivage'
+      purchase_delivery_mode: 'Mode d''arrivage'
       purchase_order: 'Achat'
       purchase_order_line: 'Ligne d''achat'
       purchase_payment: 'Décaissement'
@@ -427,6 +432,7 @@ fra:
     crypt_mode: 'Mode de cryptage'
     currencies: 'Devises'
     currency: 'Devise'
+    currency_amount: 'Montant d''origine'
     currency_credit: 'Crédit'
     currency_debit: 'Débit'
     currency_id: 'Devise'
@@ -498,6 +504,7 @@ fra:
     duration: 'Durée'
     ean13: 'Code EAN13'
     email: 'Courriel (e-mail)'
+    emitter_cash_id: 'Trésorerie émettrice'
     employed: 'Employé par la société'
     employees: 'employés'
     employment: 'Emploi/Rôle'
@@ -566,6 +573,7 @@ fra:
     id: 'ID'
     immobilizations_account_id: 'Compte d''immobilisation'
     importance: 'Importance'
+    in_cash: 'En espèce'
     in_name: 'Abréviation incluse dans le nom de la personne'
     included: 'Incluse'
     indirect_links: 'Liens indirects'
@@ -598,9 +606,6 @@ fra:
     journal_entry_id: 'Écriture'
     journal_entry_lines: 'Lignes d''écritures'
     journal_id: 'Journal'
-    journal_record: 'Pièce comptable' #!
-    journal_record_id: 'Pièce comptable' #!
-    journal_records: 'Pièces comptables' #!
     journals: 'Journaux'
     key: 'Clé'
     label: 'Libellé'
@@ -763,12 +768,11 @@ fra:
     reason: 'Motif'
     receipt: 'Reçu électronique'
     received: 'Reçue'
-    record: 'Pièce comptable' #!
-    record_id: 'Pièce comptable' #!
+    receiver_cash_id: 'Tésorerie réceptrice'
     record_value: 'Enregistrement'
     record_value_id: 'Enregistrement'
-    record_value_type: 'Type d''''enregistrement'
-    records: 'Pièces comptables'
+    record_value_type: 'Type d''enregistrement'
+    records: 'Pièces comptables' #!
     reductible: 'Réductible'
     reduction: 'Ligne de réduction'
     reduction_origin: 'Ligne soumise à réduction'
@@ -777,6 +781,7 @@ fra:
     reduction_rate: 'Taux de réduction'
     reduction_submissive: 'Soumis à réduction'
     reductions: 'Lignes de réductions'
+    reference_number: 'N°Référence'
     reflation_submissive: 'Soumis à la relance'
     remaining_duration: 'Durée d''utilisation prévue (heures)'
     required: 'Obligatoire'
@@ -916,9 +921,9 @@ fra:
     vat_submissive: 'Soumis à la TVA'
     virtual: 'Virtuel'
     virtual_quantity: 'Stock virtuel'
-    warehouse: 'Lieu de stockage' #!
+    warehouse: 'Lieu de stockage'
     warehouse_id: 'Lieu de stockage'
-    warehouses: 'Lieux de stockage' #!
+    warehouses: 'Lieux de stockage'
     webpass: 'Mot de passe web'
     website: 'Site web'
     weight: 'Poids (kg)'
