--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -229,6 +229,7 @@ spa:
       #>area: 'Area'
       #>bank_statement: 'Bank statement'
       #>cash: 'Cash'
+      #>cash_transfer: 'Cash transfer'
       company: 'Compañía'
       #>contact: 'Contact'
       #>currency: 'Currency'
@@ -238,6 +239,7 @@ spa:
       #>delay: 'Delay'
       #>department: 'Department'
       #>deposit: 'Deposit'
+      #>deposit_line: 'Deposit line'
       #>district: 'District'
       #>document: 'Document'
       #>document_template: 'Document template'
@@ -272,6 +274,9 @@ spa:
       #>product_category: 'Product category'
       #>product_component: 'Product component'
       #>profession: 'Profession'
+      #>purchase_delivery: 'Purchase delivery'
+      #>purchase_delivery_line: 'Purchase delivery line'
+      #>purchase_delivery_mode: 'Purchase delivery mode'
       #>purchase_order: 'Purchase order'
       #>purchase_order_line: 'Purchase order line'
       #>purchase_payment: 'Disbursement'
@@ -427,6 +432,7 @@ spa:
     #>crypt_mode: 'Crypt mode'
     #>currencies: 'Currencies'
     #>currency: 'Currency'
+    #>currency_amount: 'Currency amount'
     #>currency_credit: 'Currency credit'
     #>currency_debit: 'Currency debit'
     #>currency_id: 'Currency'
@@ -498,6 +504,7 @@ spa:
     #>duration: 'Duration'
     #>ean13: 'Ean13'
     #>email: 'Email'
+    #>emitter_cash_id: 'Emitter cash'
     #>employed: 'Employed'
     #>employees: 'Employees'
     #>employment: 'Employment'
@@ -566,6 +573,7 @@ spa:
     #>id: 'ID'
     #>immobilizations_account_id: 'Immobilizations account'
     #>importance: 'Importance'
+    #>in_cash: 'In cash'
     #>in_name: 'In name'
     #>included: 'Included'
     #>indirect_links: 'Indirect links'
@@ -760,10 +768,10 @@ spa:
     #>reason: 'Reason'
     #>receipt: 'Receipt'
     #>received: 'Received'
+    #>receiver_cash_id: 'Receiver cash'
     #>record_value: 'Record value'
     #>record_value_id: 'Record value'
     #>record_value_type: 'Record value type'
-    #>records: 'Records'
     #>reductible: 'Reductible'
     #>reduction: 'Reduction'
     #>reduction_origin: 'Reduction origin'
@@ -772,6 +780,7 @@ spa:
     #>reduction_rate: 'Reduction rate'
     #>reduction_submissive: 'Reduction submissive'
     #>reductions: 'Reductions'
+    #>reference_number: 'Reference number'
     #>reflation_submissive: 'Reflation submissive'
     #>remaining_duration: 'Remaining duration'
     #>required: 'Required'
@@ -911,7 +920,9 @@ spa:
     #>vat_submissive: 'Vat submissive'
     #>virtual: 'Virtual'
     #>virtual_quantity: 'Virtual quantity'
+    #>warehouse: 'Warehouse'
     #>warehouse_id: 'Warehouse'
+    #>warehouses: 'Warehouses'
     #>webpass: 'Webpass'
     #>website: 'Website'
     #>weight: 'Weight'
